# five-letters

./: Dockerfile  README.md  docker-compose.yml
src/backend/: .env.example  alembic.ini  pyproject.toml
src/backend/app/: config.py  main.py
src/backend/app/api/: deps.py
src/backend/app/api/api_v1/: api.py
src/backend/app/api/api_v1/endpoints/: attempt.py  login.py  user.py  users.py  word.py
src/backend/app/core/: game.py  security.py
src/backend/app/db/: connection.py  mixins.py  tables.py
src/backend/app/db/entities/: mixins.py  tables.py
src/backend/app/db/entities/queries/: achievement.py
src/backend/app/db/entities/repository/: attempt.py  base.py  user.py  word.py
src/backend/app/db/migrations/: env.py
src/backend/app/db/migrations/versions/: 24e8ca843a8c_add_admin_field.py  407dfc32fa62_add_tables.py  841658e36cf0_changed_attempt_columns_names.py  a81bd736403c_add_tables.py  af134fc51ebb_changed_progress_column_name_in_user_.py  f6021153cb37_changed_default_for_word_id.py
src/backend/app/models/: common.py
src/backend/app/schemas/: attempt.py  mixins.py  user.py  word.py
src/backend/app/services/: attempt.py  base.py  user.py  word.py
src/backend/migrations/: env.py
src/frontend/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.tsx  constants.ts  index.css  main.tsx
src/frontend/src/api/: attempt.ts  session.ts  user.ts  utils.ts
src/frontend/src/hooks/: app.ts
src/frontend/src/store/: store.ts  types.ts
src/frontend/src/types/: attempt.ts  common.ts  session.ts  (+1 more)
(+21 files in other folders)
